changes is done

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -9,7 +9,8 @@
     
 </head>
 <h3> hello world </h3>
-<script src="variable.js" >
+<h4><span style="color:aqua"> java script </span></h4>
+<script src="function.js" >
 </script>
 
 <body>
